tests/rosetta/out/Fortran/15-puzzle-solver.f90
! Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
program p_15_puzzle_solver
  implicit none
  integer, parameter :: testpkg_Answer = 42
  real, parameter :: testpkg_Pi = 3.14
  print *, testpkg%FifteenPuzzleExample()
  contains
  integer function testpkg_Add(a, b) result(res)
    integer, intent(in) :: a, b
    res = a + b
    return
  end function testpkg_Add
end program p_15_puzzle_solver
